# s2cli

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
references/: FIELDS.md
scripts/: install.sh
src/s2/: cli.py  output.py
src/s2/commands/: author.py  authors.py  paper.py  papers.py  recommend.py  search.py
src/s2cli/: __init__.py  _version.py  cli.py  client.py  config.py  input.py  options.py  yaml_config.py
src/s2cli/commands/: author.py  authors.py  citetree.py  paper.py  papers.py  recommend.py  search.py
