[project]
name = "s2-cli"
version = "0.1.0"
description = "Semantic Scholar CLI for querying academic papers, authors, and citations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "semanticscholar>=0.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
s2 = "s2.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
