[project]
name = "s2cli"
dynamic = ["version"]
description = "Semantic Scholar CLI for querying academic papers, authors, and citations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "semanticscholar>=0.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "sqlite-utils>=3.35.0",
]

[project.scripts]
s2cli = "s2cli.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/s2cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/s2cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
